[metadata]
name = pyzmo
version = 0.2.0
author = Georgi Valkov
author_email = georgi.t.valkov@gmail.com

license = Revised BSD License
description = tiny hotkey library and daemon
long_description = file: README.rst
keywords = evdev, hotkey
url = https://github.com/gvalkov/pyzmo

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
packages = find:
zip_safe = True
install_requires =
    evdev
    hy

[options.package_data]
pyzmo = *.hy
